# skirt

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/: SECURITY.md
.github/workflows/: ci.yml
src/: lazy_lock.rs  lib.rs  mutex.rs  once.rs  once_lock.rs  rwlock.rs
src/sync/: atomic.rs  mod.rs
