[package]
name = "skirt"
description = "spinlocks rawr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abbieirl/skirt"
keywords = ["sync"]
categories = ["no-std"]

[features]
std = ["portable-atomic/std"]
nightly = ["lock_api/nightly"]
lock_api = ["dep:lock_api"]
portable = ["dep:portable-atomic"]

[dependencies]
lock_api = { version = "0.4.12", optional = true }
portable-atomic = { version = "1.11.0", optional = true }

[dev-dependencies]
divan = "0.1.17"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "deny"
